--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +18,8 @@
     "nodemon": "^2.0.22",
     "pg-promise": "^11.4.3",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
